--- a/Rutgers_Data_Science/wiki_movies/ETL_clean_kaggle_data.ipynb
+++ b/Rutgers_Data_Science/wiki_movies/ETL_clean_kaggle_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,80 +22,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#  Add the clean movie function that takes in the argument, \"movie\".\n",
     "def clean_movie(movie):\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "\n",
+    "    movie = dict(movie)\n",
+    "    altTitles = {}\n",
+    "    for key in ['Arabic', 'Cantonese', 'Chinese', 'French', 'Hangul', 'Hebrew', 'Hepburn', 'Japanese', 'Literally',  'Mandarin', 'McCune-Reischauer', 'Original title', 'Polish',  'Revised Romanization', 'Romanized', 'Russian', 'Simplified', 'Traditional', 'Yiddish']:\n",
+    "        if key in movie:\n",
+    "            altTitles[key] = movie[key]\n",
+    "            movie.pop(key)\n",
+    "    if len(altTitles) > 0:\n",
+    "        movie['alternate_titles'] = altTitles\n",
+    "        # merge column names\n",
+    "    def change_column_name(old_name, new_name):\n",
+    "        if old_name in movie:\n",
+    "            movie[new_name] = movie.pop(old_name)\n",
+    "    change_column_name('Adaptation by', 'Writer(s)')\n",
+    "    change_column_name('Country of origin', 'Country')\n",
+    "    change_column_name('Directed by', 'Director')\n",
+    "    change_column_name('Distributed by', 'Distributor')\n",
+    "    change_column_name('Edited by', 'Editor(s)')\n",
+    "    change_column_name('Length', 'Running time')\n",
+    "    change_column_name('Original release', 'Release date')\n",
+    "    change_column_name('Music by', 'Composer(s)')\n",
+    "    change_column_name('Produced by', 'Producer(s)')\n",
+    "    change_column_name('Producer', 'Producer(s)')\n",
+    "    change_column_name('Productioncompanies ', 'Production company(s)')\n",
+    "    change_column_name('Productioncompany ', 'Production company(s)')\n",
+    "    change_column_name('Released', 'Release Date')\n",
+    "    change_column_name('Release Date', 'Release date')\n",
+    "    change_column_name('Screen story by', 'Writer(s)')\n",
+    "    change_column_name('Screenplay by', 'Writer(s)')\n",
+    "    change_column_name('Story by', 'Writer(s)')\n",
+    "    change_column_name('Theme music composer', 'Composer(s)')\n",
+    "    change_column_name('Written by', 'Writer(s)')\n",
     "    return movie"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1 Add the function that takes in three arguments;\n",
     "# Wikipedia data, Kaggle metadata, and MovieLens rating data (from Kaggle)\n",
     "\n",
-    "def function_name():\n",
-    "    # Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
-    "    \n",
-    "\n",
-    "    # Open and read the Wikipedia data JSON file.\n",
-    "    \n",
-    "    \n",
-    "    # Write a list comprehension to filter out TV shows.\n",
-    "    \n",
-    "\n",
-    "    # Write a list comprehension to iterate through the cleaned wiki movies list\n",
-    "    # and call the clean_movie function on each movie.\n",
-    "    \n",
-    "\n",
-    "    # Read in the cleaned movies list from Step 4 as a DataFrame.\n",
-    "\n",
+    "def extract_transform_load(wiki_file, kaggle_file, ratings_file):\n",
+    "    kaggle_metadata = pd.read_csv(kaggle_file, low_memory=False)\n",
+    "    ratings = pd.read_csv(ratings_file)\n",
+    "    wiki_movies_raw = []\n",
+    "    with open(wiki_file, mode='r') as file: \n",
+    "        wiki_movies_raw = json.load(file)\n",
+    "        wiki_movies_raw = [movie for movie in wiki_movies_raw if ('Director' in movie or 'Directed by' in movie)\n",
+    "            and 'imdb_link' in movie\n",
+    "            and 'No. of episodes' not in movie]\n",
+    "        wiki_movies_raw = [clean_movie(movie) for movie in wiki_movies_raw] \n",
+    "    wiki_movies_df = pd.DataFrame(wiki_movies_raw)\n",
     "\n",
     "    # Write a try-except block to catch errors while extracting the IMDb ID using a regular expression string and\n",
     "    #  dropping any imdb_id duplicates. If there is an error, capture and print the exception.\n",
     "    try:\n",
-    "        \n",
-    "    except \n",
-    "\n",
+    "        wiki_movies_df[\"imdb_id\"] = wiki_movies_df[\"imdb_link\"].str.extract(r\"(tt\\d{7})\")\n",
+    "        wiki_movies_df.drop_duplicates(subset=\"imdb_id\", inplace=True)\n",
+    "    except:\n",
+    "        print(\"Something went wrong\")\n",
     "    #  Write a list comprehension to keep the columns that don't have null values from the wiki_movies_df DataFrame.\n",
-    "    \n",
-    "\n",
+    "    wiki_columns_to_keep = [column for column in wiki_movies_df.columns if wiki_movies_df[column].isnull().sum() < len(wiki_movies_df) * 0.9]\n",
+    "    wiki_movies_df = wiki_movies_df[wiki_columns_to_keep]\n",
     "    # Create a variable that will hold the non-null values from the “Box office” column.\n",
+    "    box_office = wiki_movies_df[\"Box office\"].dropna()\n",
     "\n",
     "    \n",
     "    # Convert the box office data created in Step 8 to string values using the lambda and join functions.\n",
-    "    \n",
+    "    box_office = box_office.apply(lambda x: \" \".join(x) if type(x) == list else x)\n",
     "\n",
     "    # Write a regular expression to match the six elements of \"form_one\" of the box office data.\n",
-    "   \n",
+    "    form_one = r\"\\$\\s*\\d+\\.?\\d*\\s*[mb]illi?on\"\n",
     "    # Write a regular expression to match the three elements of \"form_two\" of the box office data.\n",
-    "    \n",
+    "    form_two = r\"\\$\\s*\\d{1,3}(?:[,\\.]\\d{3})+(?!\\s[mb]illion)\"\n",
+    "\n",
     "\n",
     "    # Add the parse_dollars function.\n",
-    "    \n",
+    "    def parseDollars(string):\n",
+    "        if type(string) != str:\n",
+    "            return np.NaN\n",
+    "        # $###.# million and billion\n",
+    "        if re.match(r'\\$\\s*\\d+\\.?\\d*\\s*milli?on', string, flags=re.IGNORECASE):\n",
+    "            return float(re.sub('\\$|\\s|[a-zA-Z]','',string)) * 1000000\n",
+    "        elif re.match(r'\\$\\s*\\d+\\.?\\d*\\s*billi?on', string, flags=re.IGNORECASE):\n",
+    "            return float(re.sub('\\$|\\s|[a-zA-Z]','',string)) * 1000000000\n",
+    "        #  $###,###,###.##\n",
+    "        elif re.match(r'\\$\\s*\\d{1,3}(?:[,\\.]\\d{3})+(?!\\s[mb]illion)', string, flags=re.IGNORECASE):\n",
+    "            return float(re.sub('\\$|,','',string))\n",
+    "        else:\n",
+    "            return np.nan\n",
     "        \n",
     "    # Clean the box office column in the wiki_movies_df DataFrame.\n",
-    "\n",
+    "    wiki_movies_df[\"box_office\"] = box_office.str.extract(f\"({form_one}|{form_two})\", flags=re.IGNORECASE)[0].apply(parse_dollars)\n",
+    "    wiki_movies_df.drop(\"Box office\", axis=1, inplace=True)\n",
     "    \n",
     "    # Clean the budget column in the wiki_movies_df DataFrame.\n",
-    "    \n",
+    "    budget = wiki_movies_df[\"Budget\"].dropna()\n",
+    "    budget = budget.map(lambda x: \" \".join(x) if type(x) == list else x)\n",
+    "    budget = budget.str.replace(r\"\\$.*[-—–](?![a-z])\", \"$\", regex=True)\n",
+    "    budget = budget.str.replace(r\"\\[\\d+\\]\\s*\", \"\")\n",
+    "    wiki_movies_df[\"budget\"] = budget.str.extract(f\"({form_one}|{form_two})\", flags=re.IGNORECASE)[0].apply(parse_dollars)    \n",
     "\n",
     "    # Clean the release date column in the wiki_movies_df DataFrame.\n",
-    "    \n",
+    "    wiki_movies_df.drop(\"Budget\", axis=1, inplace=True)\n",
+    "\n",
     "\n",
     "    # Clean the running time column in the wiki_movies_df DataFrame.\n",
-    "    \n",
+    "    release_date = (wiki_movies_df[\"Release date\"].dropna().apply(lambda x: \" \".join(x) if type(x) == list else x))\n",
+    "    date_form_one = r\"(?:January|February|March|April|May|June|July|August|September|October|November|December)\\s[123]\\d,\\s\\d{4}\"\n",
+    "    date_form_two = r\"\\d{4}.[01]\\d.[123]\\d\"\n",
+    "    date_form_three = r\"(?:January|February|March|April|May|June|July|August|September|October|November|December)\\s\\d{4}\"\n",
+    "    date_form_four = r\"\\d{4}\"\n",
+    "    wiki_movies_df[\"release_date\"] = pd.to_datetime(release_date.str.extract(f\"({date_form_one}|{date_form_two}|{date_form_three}|{date_form_four})\")[0],infer_datetime_format=True,)\n",
     "     \n",
     "    # 2. Clean the Kaggle metadata.\n",
     "\n",
@@ -124,14 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 10. Create the path to your file directory and variables for the three files.\n",
-    "file_dir = '../Resources'\n",
+    "file_dir = 'resources'\n",
     "# The Wikipedia data\n",
-    "wiki_file = f'{file_dir}/wikipedia_movies.json'\n",
+    "wiki_file = f'{file_dir}/wikipedia-movies.json'\n",
     "# The Kaggle metadata\n",
     "kaggle_file = f'{file_dir}/movies_metadata.csv'\n",
     "# The MovieLens rating data.\n",
@@ -140,12 +187,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'movies_with_ratings_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_1480/738514138.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 11. Set the three variables equal to the function created in D1.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mwiki_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkaggle_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mratings_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_transform_load\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwiki_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkaggle_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mratings_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_1480/2344707858.py\u001b[0m in \u001b[0;36mextract_transform_load\u001b[0;34m(wiki_file, kaggle_file, ratings_file)\u001b[0m\n\u001b[1;32m     81\u001b[0m     \u001b[0;31m# 9. Transform and merge the ratings DataFrame.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 83\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mwiki_movies_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmovies_with_ratings_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmovies_df\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'movies_with_ratings_df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# 11. Set the three variables equal to the function created in D1.\n",
-    "wiki_file, kaggle_file, ratings_file = extract_transform_load()"
+    "wiki_file, kaggle_file, ratings_file = extract_transform_load(wiki_file, kaggle_file, ratings_file)"
    ]
   },
   {
@@ -200,7 +260,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -214,11 +274,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   },
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "fca0858ce372a21c26c3847df3bc3a29e39b34ebeee721cb1ca02525deffaca6"
    }
   }
  },
