--- a/Rutgers_Data_Science/wiki_movies/ETL_function_test.ipynb
+++ b/Rutgers_Data_Science/wiki_movies/ETL_function_test.ipynb
@@ -507,7 +507,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -521,11 +521,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   },
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "fca0858ce372a21c26c3847df3bc3a29e39b34ebeee721cb1ca02525deffaca6"
    }
   }
  },
