--- a/Rutgers_Data_Science/Mission-to-Mars/Mission_to_Mars_Challenge.ipynb
+++ b/Rutgers_Data_Science/Mission-to-Mars/Mission_to_Mars_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,20 @@
       "[WDM] - ====== WebDriver manager ======\n",
       "[WDM] - Current google-chrome version is 103.0.5060\n",
       "[WDM] - Get LATEST chromedriver version for 103.0.5060 google-chrome\n",
-      "[WDM] - Driver [/home/morpheus/.wdm/drivers/chromedriver/linux64/103.0.5060.53/chromedriver] found in cache\n"
+      "[WDM] - Driver [/home/soc/.wdm/drivers/chromedriver/linux64/103.0.5060.53/chromedriver] found in cache\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/soc/Projects/DataScience_Bootcamp/Rutgers_Data_Science/Mission-to-Mars/Mission_to_Mars_Challenge.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/soc/Projects/DataScience_Bootcamp/Rutgers_Data_Science/Mission-to-Mars/Mission_to_Mars_Challenge.ipynb#ch0000001?line=0'>1</a>\u001b[0m \u001b[39m# Set the executable path and initialize Splinter\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/soc/Projects/DataScience_Bootcamp/Rutgers_Data_Science/Mission-to-Mars/Mission_to_Mars_Challenge.ipynb#ch0000001?line=1'>2</a>\u001b[0m executable_path \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mexecutable_path\u001b[39m\u001b[39m'\u001b[39m: ChromeDriverManager()\u001b[39m.\u001b[39minstall()}\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/soc/Projects/DataScience_Bootcamp/Rutgers_Data_Science/Mission-to-Mars/Mission_to_Mars_Challenge.ipynb#ch0000001?line=2'>3</a>\u001b[0m browser \u001b[39m=\u001b[39m Browser(\u001b[39m'\u001b[39;49m\u001b[39mchrome\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mexecutable_path, headless\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/splinter/browser.py:121\u001b[0m, in \u001b[0;36mBrowser\u001b[0;34m(driver_name, retry_count, *args, **kwargs)\u001b[0m\n\u001b[1;32m    118\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n\u001b[1;32m    119\u001b[0m     \u001b[39mraise\u001b[39;00m DriverNotFoundError(\u001b[39m\"\u001b[39m\u001b[39mNo driver for \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m driver_name)\n\u001b[0;32m--> 121\u001b[0m \u001b[39mreturn\u001b[39;00m get_driver(driver, retry_count\u001b[39m=\u001b[39;49mretry_count, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/splinter/browser.py:92\u001b[0m, in \u001b[0;36mget_driver\u001b[0;34m(driver, retry_count, *args, **kwargs)\u001b[0m\n\u001b[1;32m     90\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(retry_count):\n\u001b[1;32m     91\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m---> 92\u001b[0m         \u001b[39mreturn\u001b[39;00m driver(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m     93\u001b[0m     \u001b[39mexcept\u001b[39;00m driver_exceptions \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m     94\u001b[0m         err \u001b[39m=\u001b[39m e\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not callable"
      ]
     }
    ],
@@ -51,18 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'browser' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/soc/Projects/DataScience_Bootcamp/Rutgers_Data_Science/Mission-to-Mars/Mission_to_Mars_Challenge.ipynb Cell 4'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/soc/Projects/DataScience_Bootcamp/Rutgers_Data_Science/Mission-to-Mars/Mission_to_Mars_Challenge.ipynb#ch0000003?line=0'>1</a>\u001b[0m \u001b[39m# Visit the mars nasa news site\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/soc/Projects/DataScience_Bootcamp/Rutgers_Data_Science/Mission-to-Mars/Mission_to_Mars_Challenge.ipynb#ch0000003?line=1'>2</a>\u001b[0m url \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mhttps://redplanetscience.com/\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/soc/Projects/DataScience_Bootcamp/Rutgers_Data_Science/Mission-to-Mars/Mission_to_Mars_Challenge.ipynb#ch0000003?line=2'>3</a>\u001b[0m browser\u001b[39m.\u001b[39mvisit(url)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/soc/Projects/DataScience_Bootcamp/Rutgers_Data_Science/Mission-to-Mars/Mission_to_Mars_Challenge.ipynb#ch0000003?line=4'>5</a>\u001b[0m \u001b[39m# Optional delay for loading the page\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/soc/Projects/DataScience_Bootcamp/Rutgers_Data_Science/Mission-to-Mars/Mission_to_Mars_Challenge.ipynb#ch0000003?line=5'>6</a>\u001b[0m browser\u001b[39m.\u001b[39mis_element_present_by_css(\u001b[39m'\u001b[39m\u001b[39mdiv.list_text\u001b[39m\u001b[39m'\u001b[39m, wait_time\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'browser' is not defined"
+     ]
     }
    ],
    "source": [
@@ -764,7 +778,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -778,14 +792,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.5"
   },
   "nteract": {
    "version": "0.15.0"
   },
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
    }
   }
  },
